--- a/typeorm/package.json
+++ b/typeorm/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "backend-desafio",
+  "name": "backend-typeorm",
   "version": "1.0.0",
   "main": "app.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
+    "predev": "npm run typeorm migration:run",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "start": "node dist/server.js",
+    "start:docker:dev": "npm install && npm run dev",
+    "docker:up": "docker-compose up -d",
+    "docker:up:build": "docker-compose up --build -d",
+    "docker:down": "docker-compose down"
   },
   "devDependencies": {
     "@types/express": "^4.17.5",
+    "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "dotenv": "^16.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
@@ -24,12 +30,13 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/node": "^14.0.5",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.25",
+    "typeorm-encrypted": "^0.5.6",
     "uuidv4": "^6.0.7"
   }
 }
